# clark-voice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  demo_personas.json  fly.toml  pyproject.toml  test_llm_config.py
benchmark/: __init__.py  config.py  e2e_benchmark.py  llm_benchmark.py  pipeline_benchmark.py  run_benchmarks.py  stt_benchmark.py  tts_benchmark.py
benchmark/results/: benchmark_20260111_194023.json  benchmark_20260111_194236.json  benchmark_20260111_194357.json  benchmark_20260111_195856.json  benchmark_20260111_195946.json  benchmark_20260111_200144.json
operators/: __init__.py  base.py  business_context.py  call_lifecycle.py  end_call.py  example.py  keyword_detector.py  transcript.py
pipeline/: __init__.py  events.py  observer.py  runtime.py
services/: fallback_llm.py
sinks/: __init__.py  base.py  database.py  stdout.py  webhook.py
tests/: test_transcript_buffering.py
utils/: audio.py
